Fix word-wrap bug in Safari

--- a/authorized_keys/static/authorized_keys/css/authorized_keys.css
+++ b/authorized_keys/static/authorized_keys/css/authorized_keys.css
@@ -3,6 +3,6 @@
 }
 
 .ssh-fingerprint {
-	overflow: hidden;
-	word-wrap: anywhere;
+	word-wrap:  break-word;
+	word-break: break-word;
 }
